# shake-satysfi

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  shake-satysfi.cabal
.github/workflows/: build.yml
app/: Main.hs
src/Language/SATySFi/: Shake.hs
src/Language/SATySFi/Syntax/: Header.hs
